--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,80 @@
   grid-template-rows: var(--header-height) auto;
   height: 100vh;
 }
+
+#home-layout {
+  display: grid;
+  grid-template-rows: 4rem auto;
+  grid-template-columns: 1fr 4fr;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+#home-projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+  grid-auto-rows: 16rem;
+  gap: 1rem;
+}
+
+.project-card {
+  cursor: pointer;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr;
+  background: darkgray;
+}
+
+#session-creator {
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid  #303030;
+  padding-right: 1rem;
+}
+
+#session-creator > label + * {
+  margin-bottom: 0.5rem;
+}
+
+#connect-layout {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+#connect-form > label + * {
+  margin-bottom: 1rem;
+}
+
+#connect-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 16rem;
+}
+
+textarea.token-input {
+  height: 6rem;
+  resize: vertical;
+}
+
+#cursors {
+  position: absolute;
+  overflow: hidden;
+  inset: var(--header-height) 0 0 0;
+  pointer-events: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cursor {
+  position: relative;
+  width: 1rem;
+  height: 1rem;
+  background-image: url('assets/cursor.png');
+  background-size: 1rem 1rem;
+  image-rendering: pixelated;
+  filter: hue-rotate(attr(data-hue)deg) drop-shadow(0 0 0.2rem white);
+  transition: left 0.1s linear, top 0.1s linear;
+  list-style: none;
+}
