--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+@font-face {
+  font-family: "Monocraft";
+  src: local("Monocraft"),
+    url("./fonts/Monocraft.ttf") format("truetype");
+ }
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Monocraft", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
