--- a/src/App.css
+++ b/src/App.css
@@ -8,62 +8,6 @@
   height: 100vh;
 }
 
-#home-layout {
-  display: grid;
-  grid-template-rows: 4rem auto;
-  grid-template-columns: 1fr 4fr;
-  gap: 1rem;
-  padding: 1rem;
-}
-
-#home-projects {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
-  grid-auto-rows: 16rem;
-  gap: 1rem;
-}
-
-.project-card {
-  cursor: pointer;
-  display: grid;
-  grid-template-rows: 1fr auto;
-  grid-template-columns: 1fr;
-  background: darkgray;
-}
-
-#session-creator {
-  display: flex;
-  flex-direction: column;
-  border-right: 1px solid  #303030;
-  padding-right: 1rem;
-}
-
-#session-creator > label + * {
-  margin-bottom: 0.5rem;
-}
-
-#connect-layout {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  gap: 1rem;
-}
-
-#connect-form > label + * {
-  margin-bottom: 1rem;
-}
-
-#connect-form {
-  display: flex;
-  flex-direction: column;
-  max-width: 16rem;
-}
-
-textarea.token-input {
-  height: 6rem;
-  resize: vertical;
-}
-
 #cursors {
   position: absolute;
   overflow: hidden;
@@ -83,4 +27,10 @@ textarea.token-input {
   filter: hue-rotate(attr(data-hue)deg) drop-shadow(0 0 0.2rem white);
   transition: left 0.1s linear, top 0.1s linear;
   list-style: none;
+}
+
+*[disabled] {
+  opacity: 0.7;
+  cursor: not-allowed;
+  user-select: none;
 }
