--- a/src/styles/react-tabs.css
+++ b/src/styles/react-tabs.css
@@ -14,6 +14,14 @@
     display: grid;
 }
 
+.react-tabs__tab-panel{
+    overflow: hidden;
+}
+
+.react-tabs__tab-panel > *{
+    overflow: hidden;
+}
+
 .react-tabs__tab {
     background: #242424;
     color: lightgray;
