added visual feedback on keypresses and mousclicks. Theres still a very important todo though...

--- a/src/styles/note.css
+++ b/src/styles/note.css
@@ -52,3 +52,7 @@
 .white-key.e-b{
     background-image: url("src/assets/piano/e-b-key.png");
 }
+
+.pressed-white, .pressed-black::after{
+    filter: hue-rotate(-90deg);
+}
