--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,54 +1,88 @@
-#home-layout #connect-layout {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 1rem;
-}
-
-#home-layout #connect-form > label + * {
-    margin-bottom: 1rem;
-    display: block;
-}
-
-#home-layout #connect-form {
-    max-width: 16rem;
-}
-
 #home-layout {
+    position: relative;
     display: grid;
-    grid-template-rows: 4rem auto;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 12rem 12rem;
+    justify-content: center;
+    align-items: center;
     gap: 1rem;
     padding: 1rem;
 }
 
-#home-layout #home-projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
-    grid-auto-rows: 16rem;
-    gap: 1rem;
+#home-layout #home-controls #open-project,
+#home-layout #home-controls #new-project {
+    display: block;
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    cursor: pointer;
+    grid-template-columns: 1fr;
+    border-image-source: url("/src/assets/home-button.png");
+    border-image-slice: 0 2 2 2 fill;
+    border-image-width: 6px;
+    padding: 12px;
+    image-rendering: pixelated;
 }
 
-#home-layout .project-card {
+#home-layout #home-controls #open-project {
+    position: relative;
+    z-index: 10;
+}
+
+#home-layout #home-controls #open-project #open-project-input {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+
+#home-layout #home-controls #open-project *:not(input) {
+    pointer-events: none;
+}
+
+#home-layout #home-controls #open-project #open-project-input::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+}
+
+#home-layout #home-controls #open-project.dragging-over {
+    border: rgba(255, 255, 255, 0.5) 2px dashed;
+}
+
+#home-layout #home-controls #open-project.error::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    display: grid;
+    place-content: center;
+    background-color: #560000;
+    background-image: url("/src/assets/input-error.png");
+    background-size: 1.5rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    image-rendering: pixelated;
+}
+
+#home-layout #home-controls #recently-opened {
+    margin: 0;
+    padding: 0;
+    max-height: 16rem;
+    overflow-y: auto;
+}
+
+#home-layout #home-controls .recent-project {
     cursor: pointer;
     display: grid;
-    grid-template-rows: 1fr auto;
     grid-template-columns: 1fr;
-    background: darkgray;
+    border-image-source: url("/src/assets/recently-opened.png");
+    border-image-slice: 2 fill;
+    border-image-width: 6px;
+    padding: 8px;
+    image-rendering: pixelated;
+    margin-bottom: 1rem;
 }
 
-#home-layout #session-creator {
-    display: flex;
-    flex-direction: column;
-    border-right: 1px solid #303030;
-    padding-right: 1rem;
-}
-
-#home-layout #session-creator > label + * {
-    margin-bottom: 0.5rem;
-}
-
-#home-layout textarea.token-input {
-    height: 6rem;
-    resize: vertical;
+#home-layout #home-controls *.hoverable:hover {
+    box-shadow: #38520a88 5px 5px 20px 0px;
 }
