--- a/src/styles/Connect.css
+++ b/src/styles/Connect.css
@@ -1,10 +1,3 @@
-#connect-layout #connect-layout {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 1rem;
-}
-
 #connect-layout #connect-form > label + * {
     margin-bottom: 1rem;
     display: block;
@@ -15,6 +8,7 @@
 }
 
 #connect-layout {
+    position: relative;
     display: grid;
     grid-template-columns: 12rem 12rem;
     justify-content: center;
