--- a/src/styles/retro-wave.css
+++ b/src/styles/retro-wave.css
@@ -1,9 +1,3 @@
-@keyframes moveDownAnimation {
-    100% {
-        background-position-y: 100%;
-    }
-}
-
 @font-face {
     font-family: "VT323-Regular";
     src: url("src/assets/VT323-Regular.ttf") format("truetype");
@@ -14,7 +8,7 @@
     font-size: 1.2em;
 }
 
-#content h1, #content hr, #content span, #content button, #content select, #content label, #content input {
+* {
     color: rgb(225, 225, 225);
     text-shadow: 0px 0px 2px hsl(0, 100%, 70%),
                  0px 0px 15px red,
@@ -28,15 +22,23 @@
             drop-shadow(0px 0px 60px green);
 }
 
+@keyframes moveDownAnimation {
+    100% {
+        background-position-y: 100%;
+    }
+}
+
+/* this thing literally MELTS the browser 🫠 */
+/* TODO: try gifs instead of animation */
 #crt-lines {
     position: absolute;
     inset: 0;
     background: url(src/assets/lines.jpg);
-    z-index: 10;
     background-size: 9px auto;
     mix-blend-mode: overlay;
     pointer-events: none;
     opacity: 0.4;
+    z-index: 100;
     animation: moveDownAnimation 150s linear infinite;
 }
 
@@ -52,9 +54,31 @@
     position: absolute;
     inset: 0;
     background: url(src/assets/vignette.png);
-    z-index: 11;
+    z-index: 110;
     background-size: 100% 100%;
     mix-blend-mode: overlay;
     pointer-events: none;
     opacity: 0.6;
+}
+
+.ascii-art {
+    position: absolute;
+    opacity: 0.3;
+    z-index: -1;
+
+    /* letter-spacing: clamp(0px, 0.1vw, 1px);
+    left: 50%;
+    transform: translateX(-70%) translateY(-5%);
+    font-size: clamp(4px, 0.5vw, 6px);
+    color: hsl(27, 100%, 65%);
+    filter: drop-shadow(0px 0px 30px hsl(0, 100%, 65%))
+            drop-shadow(0px 0px 20px hsl(27, 100%, 65%));
+    backface-visibility: hidden; */
+    
+    background-image: url("/src/assets/logo-ascii.png");
+    inset: 0;
+    filter: saturate(1.5);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 20% center;
 }
