Create Session inside Modal
I was this 🤏 close to killing myself by using React. Fuck React.

--- a/src/styles/react-modal.css
+++ b/src/styles/react-modal.css
@@ -1,8 +1,10 @@
 .ReactModalPortal {
-    position: absolute;
+    display: contents;
 }
 
 .ReactModalPortal .ReactModal__Overlay {
+    position: absolute !important;
+    inset: 0 !important;
     background: #00000066 !important;
     display: grid;
     place-content: center;
