--- a/src/styles/Music.css
+++ b/src/styles/Music.css
@@ -1,10 +1,11 @@
-#music-layout {
+.music-layout {
+    position: relative;
     display: grid;
     grid-template-rows: 2rem auto;
     grid-template-columns: auto;
 }
 
-#music-layout #toolbar {
+.music-layout .toolbar {
     display: flex;
     flex-direction: row;
     margin: 0;
@@ -12,11 +13,11 @@
     background-color: rgba(37, 2, 2, 0.402);
 }
 
-#music-layout #toolbar li {
+.music-layout .toolbar li {
     list-style: none;
 }
 
-#music-layout #toolbar > .toolbar-item {
+.music-layout .toolbar > .toolbar-item {
     position: relative;
     display: flex;
     align-items: center;
@@ -30,25 +31,16 @@
     cursor: pointer;
 }
 
-#music-layout #toolbar #collaboration {
-    
+.music-layout .toolbar .collaboration.active {
+    border-image-source: url("/src/assets/toolbar-item-active.png");
 }
 
-#collaboration-modal {
-    padding: 8px;
-    display: grid;
-    grid-template-rows: 3rem auto;
-    grid-template-columns: 3rem 24rem;
-    image-rendering: pixelated;
-    gap: 1rem;
-}
-
-#music-layout #music-notes {
+.music-layout .music-notes {
     position: relative;
     overflow: auto;
 }
 
-#music-layout #music-notes #mouse-cursors {
+.music-layout .music-notes .mouse-cursors {
     position: absolute;
     inset: 0;
     pointer-events: none;
