--- a/src/styles/synthesizer/Synthesizer.css
+++ b/src/styles/synthesizer/Synthesizer.css
@@ -1,4 +1,11 @@
 .music-layout .piano-roll{
+    display: grid;
+    grid-template-rows: 2rem auto;
+    width: 100%;
+    height: 100%;
+}
+
+.music-layout .piano-roll .content{
     overflow: auto;
     position: relative;
     display: grid;
@@ -8,10 +15,19 @@
     height: 100%;
 }
 
+.music-layout .piano-roll .toolbar {
+    display: flex;
+    background: #5c2924;
+    color: white;
+    align-items: center;
+    gap: 0.5rem;
+    border-bottom: 6px solid #221210;
+}
+
 .music-layout .piano-roll .midi-editor{
     background: #362523;
     grid-column: 3 / 4;
-    grid-row-start: 1;
+    grid-row-start: 2;
 }
 
 .music-layout .piano-roll ul.keys{
@@ -19,7 +35,7 @@
     margin: 0;
     padding: 0;
     grid-column: 1 / 3;
-    grid-row-start: 1;
+    grid-row-start: 2;
 }
 
 .music-layout .piano-roll ul.octaves{
@@ -27,7 +43,7 @@
     margin: 0;
     padding: 0;
     grid-column: 1 / 2;
-    grid-row-start: 1;
+    grid-row-start: 2;
     z-index: 2;
     pointer-events: none;
 }
