--- a/src/styles/editor/MidiEditor.css
+++ b/src/styles/editor/MidiEditor.css
@@ -1,8 +1,150 @@
-.midi-editor {
+.music-layout .piano-roll {
+    display: grid;
+    grid-template-rows: 2rem auto;
+    width: 100%;
+    height: 100%;
+}
+
+.music-layout .piano-roll .content {
+    overflow: auto;
+    position: relative;
+    display: grid;
+    grid-template-columns: 26px 144px auto;
+    grid-template-rows: auto;
+    width: 100%;
+    height: 100%;
+}
+
+.music-layout .piano-roll .toolbar {
+    display: flex;
+    background: #5c2924;
+    color: white;
+    align-items: center;
+    gap: 0.5rem;
+    border-bottom: 6px solid #221210;
+}
+
+.music-layout .piano-roll .midi-editor {
+    position: relative;
+    grid-column: 3 / 4;
+    grid-row-start: 2;
     display: grid;
     background-color: #362523;
-    background-image: linear-gradient(0deg, #00000000 50%, #00000044 50%), linear-gradient(90deg, #6e6e6e 0px, #6e6e6e 4px, #00000000 4px);
+    background-image:
+        linear-gradient(0deg, #00000000 50%, #00000044 50%),
+        linear-gradient(90deg, #6e6e6e 0px, #6e6e6e 4px, #00000000 4px),
+        linear-gradient(90deg, #a0a0a0 0%, #a0a0a0 1%, #00000000 1%, #00000000 25%, #a0a0a0 25%, #a0a0a0 26%, #00000000 26%, #00000000 50%, #a0a0a0 50%, #a0a0a0 51%, #00000000 51%, #00000000 75%, #a0a0a0 75%, #a0a0a0 76%, #00000000 76%);
     background-blend-mode: multiply;
     background-repeat: repeat;
-	transition: background-size 0.3s ease, background-position-x 0.3s ease;
+    overflow: hidden;
+}
+
+.music-layout .piano-roll .midi-editor .note {
+    position: absolute;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 36px;
+    background-color: #6e6e6e;
+}
+
+.music-layout .piano-roll ul.keys {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    grid-column: 1 / 3;
+    grid-row-start: 2;
+    z-index: 10;
+}
+
+.music-layout .piano-roll ul.octaves {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    grid-column: 1 / 2;
+    grid-row-start: 2;
+    z-index: 2;
+    pointer-events: none;
+    z-index: 10;
+}
+
+.music-layout .piano-roll ul.octaves .octave {
+    height: 432px;
+    user-select: none;
+    display: grid;
+    place-content: center;
+    background-image: url("src/assets/piano/octave.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    image-rendering: pixelated;
+}
+
+.music-layout .piano-roll ul.octaves .base-octave {
+
+    filter: hue-rotate(90deg);
+}
+
+.music-layout .piano-roll ul.keys .key {
+    user-select: none;
+    position: relative;
+}
+
+.music-layout .piano-roll ul.keys .black-key {
+    height: 0;
+    width: 0;
+}
+
+.music-layout .piano-roll ul.keys .black-key::after {
+    content: attr(data-key-name);
+    position: absolute;
+    z-index: 1;
+    width: 96px;
+    height: 30px;
+    top: 0;
+    transform: translateY(-50%);
+    background-position: right;
+    background-image: url("src/assets/piano/black-key.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    image-rendering: pixelated;
+    padding-left: 39px;
+}
+
+.music-layout .piano-roll ul.keys .white-key {
+    width: 170px;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: contain;
+    image-rendering: pixelated;
+    color: black;
+}
+
+.music-layout .piano-roll ul.keys .white-key::after {
+    content: attr(data-key-name);
+    position: absolute;
+    inset: 0;
+    padding-left: 38px;
+}
+
+.music-layout .piano-roll ul.keys .white-key.general {
+    background-image: url("src/assets/piano/general-key.png");
+    height: 72px;
+    line-height: 72px;
+}
+
+.music-layout .piano-roll ul.keys .white-key.c-f {
+    background-image: url("src/assets/piano/c-f-key.png");
+    height: 54px;
+    line-height: 62px;
+}
+
+.music-layout .piano-roll ul.keys .white-key.e-b {
+    background-image: url("src/assets/piano/e-b-key.png");
+    height: 54px;
+    line-height: 46px;
+}
+
+.music-layout .piano-roll ul.keys .pressed-white,
+.pressed-black::after {
+    filter: hue-rotate(-90deg);
 }
