--- a/src/styles/editor/MidiEditor.css
+++ b/src/styles/editor/MidiEditor.css
@@ -39,6 +39,13 @@
     overflow: hidden;
 }
 
+.music-layout .piano-roll .midi-editor .selection {
+    border: 4px solid #762929be;
+    position: absolute;
+    z-index: 1;
+    background-color: #7629294a;
+}
+
 .music-layout .piano-roll .midi-editor .note {
     position: absolute;
     list-style: none;
@@ -46,6 +53,25 @@
     padding: 0;
     height: 36px;
     background-color: #6e6e6e;
+    display: flex;
+    justify-content: space-between;
+}
+
+.music-layout .piano-roll .midi-editor .note *:nth-child(1) {
+    cursor: w-resize;
+    max-width: 30px;
+    flex: 1;
+}
+
+.music-layout .piano-roll .midi-editor .note *:nth-child(2) {
+    cursor: grab;
+    flex: 2.5;
+}
+
+.music-layout .piano-roll .midi-editor .note *:nth-child(3) {
+    cursor: e-resize;
+    max-width: 30px;
+    flex: 1;
 }
 
 .music-layout .piano-roll ul.keys {
