--- a/src/styles/editor/SynthEditor.css
+++ b/src/styles/editor/SynthEditor.css
@@ -1,10 +1,12 @@
 .synth-editor{
+    position: relative;
     background-image: url("src/assets/infinite-background-tile-center-cross-dark.png");
     background-repeat: repeat;
     background-size: 56px;
     image-rendering: pixelated;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .synth-editor ul{
@@ -12,6 +14,8 @@
     left: 0;
     top: 0;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .audionode{
@@ -21,6 +25,10 @@
     height: 100px;
     left: 0px;
     right: 0px;
+
+    animation: pattern-drag-begin 1s cubic-bezier(.13,1.3,.1,1) forwards;
+    transition: rotate 0.1s ease-out;
+    transform-origin: left top;
 }
 
 .audio-connection-node{
@@ -30,4 +38,11 @@
     height: 10px;
     right: 0;
     bottom: 0;
+}
+
+.connection-lines{
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    left: 0;
 }
