--- a/src/styles/editor/MidiEditor.css
+++ b/src/styles/editor/MidiEditor.css
@@ -52,7 +52,7 @@
     margin: 0;
     padding: 0;
     height: 36px;
-    background-color: #6e6e6e;
+    background-color: #6f282888;
     display: flex;
     justify-content: space-between;
 }
