--- a/src/styles/editor/MidiEditor.css
+++ b/src/styles/editor/MidiEditor.css
@@ -30,10 +30,6 @@
     grid-row-start: 2;
     display: grid;
     background-color: #362523;
-    background-image:
-        linear-gradient(0deg, #00000000 50%, #00000044 50%),
-        linear-gradient(90deg, #6e6e6e 0px, #6e6e6e 4px, #00000000 4px),
-        linear-gradient(90deg, #a0a0a0 0%, #a0a0a0 1%, #00000000 1%, #00000000 25%, #a0a0a0 25%, #a0a0a0 26%, #00000000 26%, #00000000 50%, #a0a0a0 50%, #a0a0a0 51%, #00000000 51%, #00000000 75%, #a0a0a0 75%, #a0a0a0 76%, #00000000 76%);
     background-blend-mode: multiply;
     background-repeat: repeat;
     overflow: hidden;
@@ -55,6 +51,16 @@
     background-color: #6f282888;
     display: flex;
     justify-content: space-between;
+}
+
+@keyframes note-select {
+    from { box-shadow: 0 0 0 0 #4a42bd4a; }
+    to { box-shadow: 0 0 0 20px #4a42bd00; }
+}
+
+.music-layout .piano-roll .midi-editor .note.selected {
+    animation: note-select 0.3s ease-out forwards;
+    background-color: #4a42bdb1;
 }
 
 .music-layout .piano-roll .midi-editor .note *:nth-child(1) {
