--- a/src/styles/modal/Collaboration.css
+++ b/src/styles/modal/Collaboration.css
@@ -1,29 +1,31 @@
 .collaboration-modal {
     padding: 8px;
     display: grid;
-    grid-template-rows: 3rem 1fr;
+    grid-template-rows: 3rem auto;
     grid-template-columns: auto minmax(12rem, 28rem);
     image-rendering: pixelated;
     gap: 1rem;
+    overflow: hidden;
 }
 
 .collaboration-modal .collaboration-lock {
     grid-row: 1 / 3;
-    width: 100%;
+    justify-self: center;
     height: 100%;
 }
 
 .collaboration-modal.active .title {
+    grid-column: 1 / 2;
     color: aquamarine !important;
 }
 
 .collaboration-modal.active .title::after {
     content: ' [active]';
-    color: initial;
+    color: white;
 }
 
 .collaboration-modal .invite-link {
-    position:relative;
+    position: relative;
     padding: 1rem;
     margin: 1rem 0 0 0;
     font-size: 0.8em;
@@ -32,6 +34,31 @@
     border-image-width: 16px;
     overflow: hidden;
     text-overflow: ellipsis;
+    z-index: 5;
+}
+
+.collaboration-modal .stop-collaboration {
+    position: absolute;
+    background-image: url("/src/assets/stop-collaboration.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: none;
+    bottom: 0rem;
+    right: 3rem;
+    height: 11rem;
+    width: 3.5rem;
+    rotate: 4deg;
+}
+
+.collaboration-modal .start-collaboration {
+    padding: 1rem;
+    margin: 1rem 0 0 0;
+    font-size: 0.8em;
+    border-image-source: url("/src/assets/start-collaboration.png");
+    border-image-slice: 3 fill;
+    border-image-width: 16px;
+    width: 100%;
+    z-index: 3;
 }
 
 @keyframes copied {
