--- a/src/styles/retro-wave.css
+++ b/src/styles/retro-wave.css
@@ -11,6 +11,7 @@
 
 * {
     color: rgb(225, 225, 225);
+    font-family: 'VT323-Regular';
     text-shadow: 0px 0px 2px hsl(0, 100%, 70%),
                  0px 0px 15px red,
                  0px 0px 60px green;
