--- a/src/styles/allotment.css
+++ b/src/styles/allotment.css
@@ -1,6 +1,6 @@
 :root {
   --separator-border: #2b2b2b;
-  --focus-border: #452e2e;
+  --focus-border: #371d1d;
   --sash-size: 13px;
   --sash-hover-size: 5px;
 }
