--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,18 @@
 
 #root {
   display: grid;
-  grid-template-rows: var(--header-height) auto;
+  grid-template-rows: var(--header-height) 1fr auto;
   height: 100vh;
+}
+
+#development {
+  background-color: black;
+  border-top: 4px gray solid;
+  overflow: hidden;
+  display: flex;
+  height: 20px;
+  align-items: center;
+  gap: 1rem;
 }
 
 *[disabled] {
