--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -1,8 +1,9 @@
 .track-layout {
     position: relative;
     overflow: auto;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: auto 32px 1fr;
+    grid-template-columns: 1fr;
 }
 
 .track-layout .misc {
@@ -12,12 +13,10 @@
 }
 
 .track-layout .controls {
-    position: sticky;
-    bottom: 0;
-    height: 32px;
     border-top: 5px solid #2b2b2b;
-    background-color: #191919;
-    padding-left: 6rem;
+    position: relative;
+    padding-left: var(--sidebar-width);
+    transform: translateX(calc(var(--sash-hover-size) * -0.5));
 }
 
 .track-layout .controls .add-track {
@@ -46,10 +45,19 @@
     display: inline-block;
 }
 
+.track-layout .allotment {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    pointer-events: none;
+}
+
 .track-layout .track-list {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
     margin: 0;
     padding: 0;
     overflow: auto;
+    position: relative;
 }
 
 .track-layout .track-list > li {
@@ -57,7 +65,7 @@
     height: 3rem;
     list-style: none;
     display: grid;
-    grid-template-columns: 6rem auto;
+    grid-template-columns: var(--sidebar-width) auto;
     grid-template-rows: 1rem auto;
     font-size: 0.8rem;
 }
@@ -74,8 +82,12 @@
     grid-row: 1 / 3;
     grid-column: 1 / 2;
     display: grid;
-    grid-template-rows: 1fr 2rem;
+    grid-template-rows: auto 1fr;
     background-color: #25101067;
+}
+
+.track-layout .track-list > li .sidebar.hidden {
+    display: none;
 }
 
 .track-layout .track-list > li .track-mixer {
@@ -99,7 +111,6 @@
     height: 3rem;
     position: absolute;
     inset: 0;
-    border-right: 4px solid #2b2b2b;
 }
 
 .track-layout .track-list > li .pattern-list {
