--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -119,6 +119,7 @@
     padding: 0;
     position: relative;
     overflow: hidden;
+    transition: background-position 0.1s ease-out, background-size 0.1s ease-out;
 }
 
 .track-layout .track-list > li .pattern-list .pattern-drop-preview {
@@ -140,17 +141,9 @@
     overflow: hidden;
 }
 
-.track-layout .timeline {
-    position: relative;
-    margin: 0;
-    padding: 0;
-    background-color: #25020267;
-    list-style: none;
-    overflow: hidden;
+.track-layout .timeline-container {
     border-bottom: 3px solid #2b2b2b;
-}
-
-.track-layout .timeline-item {
-    line-height: 100%;
-    position: absolute;
+    background-color: #25020267;
+    padding-left: var(--sidebar-width);
+    display: grid;
 }
