--- a/src/styles/modal/Collaboration.css
+++ b/src/styles/modal/Collaboration.css
@@ -9,9 +9,14 @@
 }
 
 .collaboration-modal .collaboration-lock {
+    background-image: url('/src/assets/collaboration-lock.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     grid-row: 1 / 3;
     justify-self: center;
     height: 100%;
+    width: 100%;
 }
 
 .collaboration-modal.active .title {
