--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -121,7 +121,7 @@
     overflow: hidden;
 }
 
-.track-layout .track-list > li .pattern-list .pattern {
+.track-layout .track-list > li .pattern-list .track-pattern {
     list-style: none;
     position: absolute;
     top: 0;
@@ -129,12 +129,17 @@
     border-radius: 8px;
 }
 
-.track-layout .track-list > li .pattern-list .pattern:not(.preview) {
+.track-layout .track-list > li .pattern-list .track-pattern:not(.preview) {
     border: 3px solid #2b2b2b;
     background-color: #00000000;
 }
 
-.track-layout .track-list > li .pattern-list .pattern.preview {
+.track-layout .track-list > li .pattern-list .track-pattern .pattern-preview {
+    width: 100%;
+    height: 100%;
+}
+
+.track-layout .track-list > li .pattern-list .track-pattern.preview {
     border: 3px dashed white;
     background-color: #ffffff22;
     opacity: 0.5;
