--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -6,14 +6,40 @@
     grid-template-columns: 1fr;
 }
 
+.track-layout .timeline {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    border-bottom: 3px solid #2b2b2b;
+    background-color: #201010;
+}
+
+.track-layout .content {
+    position: relative;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: var(--sidebar-width) auto;
+}
+
+.track-layout .selection-container {
+    grid-column: 2 / 3;
+}
+
+.track-layout .allotment {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    pointer-events: none;
+}
+
 .track-layout .misc {
     margin-top: -32px;
     min-height: 10rem;
     flex: 1;
+    border-top: 5px solid #2b2b2b;
 }
 
 .track-layout .controls {
-    border-top: 5px solid #2b2b2b;
     position: relative;
     padding-left: var(--sidebar-width);
     transform: translateX(calc(var(--sash-hover-size) * -0.5));
@@ -25,7 +51,6 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: -5px;
     background-color: #191717;
     border: 5px solid #2b2b2b;
     border-top: none;
@@ -45,115 +70,97 @@
     display: inline-block;
 }
 
-.track-layout .allotment {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-    pointer-events: none;
-}
-
 .track-layout .track-list {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
     margin: 0;
     padding: 0;
     overflow: auto;
     position: relative;
 }
 
-.track-layout .track-list > li {
+.track-layout .track-list .track {
     position: relative;
-    height: 3rem;
+    height: 72px;
     list-style: none;
     display: grid;
     grid-template-columns: var(--sidebar-width) auto;
-    grid-template-rows: 1rem auto;
     font-size: 0.8rem;
 }
 
-.track-layout .track-list > li:nth-child(even) {
-    background-color: #161414;
+.track-layout .track-sidebar {
+    margin: 0;
+    padding: 0;
+    background-color: #201010;
 }
 
-.track-layout .track-list > li:nth-child(odd) {
-    background-color: #100c0c;
-}
-
-.track-layout .track-list > li .sidebar {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
-    display: grid;
-    grid-template-rows: auto 1fr;
-    background-color: #25101067;
-}
-
-.track-layout .track-list > li .sidebar.hidden {
+.track-layout .track-sidebar.hidden {
     display: none;
 }
 
-.track-layout .track-list > li .track-mixer {
+.track-layout .track {
+    margin: 0;
+    padding: 0;
+    height: 72px;
+}
+
+.track-layout .track-sidebar track .track-mixer {
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     display: flex;
     align-items: center;
 }
 
-.track-layout .track-list > li .track-name {
-    position: relative;
+.track-layout .track-sidebar track .track-name {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
+    position: relative;
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-.track-layout .track-list > li .track-name::after {
-    content: '';
-    height: 3rem;
-    position: absolute;
-    inset: 0;
-}
-
-.track-layout .track-list > li .pattern-list {
-    grid-row: 1 / 3;
-    grid-column: 2 / 3;
+.track-layout .track-list {
+    margin: 0;
     padding: 0;
-    position: relative;
-    overflow: hidden;
 }
 
-.track-layout .track-list > li .pattern-list .track-pattern {
+.track-layout .track {
+    overflow: hidden;
+    position: relative;
+}
+
+.track-layout .track .track-pattern {
     list-style: none;
     position: absolute;
     top: 0;
-    height: 3rem;
+    height: 74px;
     border-radius: 8px;
 }
 
-.track-layout .track-list > li .pattern-list .track-pattern:not(.preview) {
+.track-layout .track .track-pattern:not(.preview) {
     border: 3px solid #2b2b2b;
     background-color: #191717;
 }
 
-.track-layout .track-list > li .pattern-list .track-pattern .pattern-preview {
-    width: 100%;
-    height: 100%;
-}
-
-.track-layout .track-list > li .pattern-list .track-pattern.preview {
+.track-layout .track .track-pattern.preview {
     border: 3px dashed white;
     background-color: #ffffff22;
     opacity: 0.5;
 }
 
+.track-layout .track .track-pattern.selected {
+    border: 3px solid #ffffff;
+}
+
+.track-layout .track .track-pattern .pattern-preview {
+    width: 100%;
+    height: 100%;
+}
+
 .track-layout .mouse-cursors {
+    grid-area: content;
     position: absolute;
     inset: 0;
     pointer-events: none;
     user-select: none;
     overflow: hidden;
-}
-
-.track-layout .timeline {
-    border-bottom: 3px solid #2b2b2b;
-    background-color: #25020267;
 }
