--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -77,15 +77,6 @@
     position: relative;
 }
 
-.track-layout .track-list .track {
-    position: relative;
-    height: 72px;
-    list-style: none;
-    display: grid;
-    grid-template-columns: var(--sidebar-width) auto;
-    font-size: 0.8rem;
-}
-
 .track-layout .track-sidebar {
     margin: 0;
     padding: 0;
@@ -96,20 +87,25 @@
     display: none;
 }
 
-.track-layout .track {
+.track-layout .track-sidebar .track {
     margin: 0;
     padding: 0;
     height: 72px;
+    cursor: pointer;
 }
 
-.track-layout .track-sidebar track .track-mixer {
+.track-layout .track-sidebar .track:hover {
+    background-color: #2e1515;
+}
+
+.track-layout .track-sidebar .track .track-mixer {
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     display: flex;
     align-items: center;
 }
 
-.track-layout .track-sidebar track .track-name {
+.track-layout .track-sidebar .track .track-name {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     position: relative;
@@ -123,12 +119,17 @@
     padding: 0;
 }
 
-.track-layout .track {
+.track-layout .track-list .track {
     overflow: hidden;
     position: relative;
+    height: 72px;
+    list-style: none;
+    display: grid;
+    grid-template-columns: var(--sidebar-width) auto;
+    font-size: 0.8rem;
 }
 
-.track-layout .track .track-pattern {
+.track-layout .track-list .track .track-pattern {
     list-style: none;
     position: absolute;
     top: 0;
@@ -136,22 +137,22 @@
     border-radius: 8px;
 }
 
-.track-layout .track .track-pattern:not(.preview) {
+.track-layout .track-list .track .track-pattern:not(.preview) {
     border: 3px solid #2b2b2b;
     background-color: #191717;
 }
 
-.track-layout .track .track-pattern.preview {
+.track-layout .track-list .track .track-pattern.preview {
     border: 3px dashed white;
     background-color: #ffffff22;
     opacity: 0.5;
 }
 
-.track-layout .track .track-pattern.selected {
+.track-layout .track-list .track .track-pattern.selected {
     border: 3px solid #ffffff;
 }
 
-.track-layout .track .track-pattern .pattern-preview {
+.track-layout .track-list .track .track-pattern .pattern-preview {
     width: 100%;
     height: 100%;
 }
